src/test/deca/context/valid/methods/method_call_with_expr_args.deca
// Description :
//    Appel de méthode avec des arguments expressions.
//
// Resultats :
//    OK

class A {
    int f(int x, int y) {
        return x + y;
    }
}

{
    A a = new A();
    println(a.f(1 + 2, 3 + 4));
}

